Changed progress bar to show blocks & cleaned up node version comparing